fixed footer last time too low

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,5 +95,5 @@
     margin-left: 1em; }
 
   .bottom{
-    margin-top: 10%;
+    margin-top: 30%;
   }
